# carbon-cache

./: .gitignore  .notes  .sample.env  Cargo.toml  README.md  cargo.toml  test-profiling.sh
application/: Cargo.toml
application/src/: lib.rs  ports.rs  usecases.rs
carbon/: Cargo.toml
carbon-admin-ui/: Cargo.toml  Dioxus.toml
carbon-admin-ui/assets/: dx-components-theme.css  main.css  tailwind.css
carbon-admin-ui/src/: config.rs  main.rs
carbon-admin-ui/src/api/: mod.rs
carbon-admin-ui/src/api/client/: mod.rs
carbon-admin-ui/src/components/: mod.rs
carbon-admin-ui/src/pages/: access_management.rs  cluster_membership.rs  connected_clients.rs  dashboard.rs  data_container.rs  login.rs  mod.rs  statistics.rs
carbon-admin-ui/src/widgets/: mod.rs
carbon-admin-ui/src/widgets/empty_state/: component.rs  style.css
carbon-admin-ui/src/widgets/header/: component.rs  style.css
carbon-admin-ui/src/widgets/server_status/: component.rs
carbon-admin-ui/src/widgets/sidebar/: component.rs  style.css
carbon-admin-ui/src/widgets/tabs/: component.rs  style.css
carbon-query/: Cargo.toml
carbon-query/src/: indexes.rs  lib.rs
carbon-query/src/indexes/: hash_index.rs
carbon-server/: Cargo.toml
carbon-server/src/: main.rs
carbon/src/: domain.rs  events.rs  lib.rs  ports.rs
carbon/src/auth/: auth_service.rs  defaults.rs  error.rs  mod.rs  models.rs  moka_session_repository.rs  password.rs  repository.rs  role_service.rs  session.rs  session_store.rs  sled_repository.rs  user_service.rs
carbon/src/persistence/: mod.rs  sled_store.rs
carbon/src/planes/control/: admin_operations.rs  mod.rs  operation.rs
carbon/src/planes/data/: cache_operations.rs  mod.rs  operation.rs
scripts/: LOAD_TESTING.md  TCP_PERFORMANCE_TESTING.md  bench-session-performance.sh  load-test-1m-rps.sh  load-test-simple.sh  load-test-tcp.rs  load-test-unique-keys.rs  monitor-memory.sh  run-load-test-unique-keys.sh  test-login-logout.sh  test-session-reuse.sh
server-grpc/: Cargo.toml  build.rs
server-grpc/proto/: service.proto
server-grpc/src/: main.rs
server-grpc/src/server/: mod.rs  transformers.rs
server-http/: Cargo.toml
server-http/src/: lib.rs  main.rs  models.rs  routes.rs  state.rs  validation.rs
server-http/src/api/: requests.rs  responses.rs
server-http/src/dto/: auth.rs
server-http/src/handlers/: admin.rs  admin_ops.rs  auth.rs  cache.rs  cache_ops.rs  events.rs  health.rs  mod.rs  roles.rs  users.rs
server-http/src/handlers/admin/: cache.rs  roles.rs  users.rs
server-http/src/handlers/cache/: basic.rs  events.rs  health.rs
server-http/src/middleware/: authentication.rs  authorization.rs  mod.rs
server-http/tests/: admin.http  test_requests.http
server-tcp/: Cargo.toml  PROTOCOL.md
server-tcp/examples/: simple_client.rs
server-tcp/src/: lib.rs  main.rs  server.rs
server-tcp/src/client/: mod.rs
server-tcp/src/protocol/: mod.rs
server-unified/: Cargo.toml
server-unified/src/: main.rs
shared/: Cargo.toml
shared-http/: Cargo.toml
shared-http/src/api/: mod.rs  requests.rs  responses.rs
shared/src/: config.rs  lib.rs
storage-engine/: Cargo.toml
storage-engine/src/: foyer_cache.rs  lib.rs  moka_cache.rs
