[workspace]
resolver = "2"
members = [
    "server-http",
    "server-tcp",
    "storage-engine",
    "shared",
    "carbon",
    "carbon-server",
    "carbon-admin-ui",
    "shared-http",
]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1.68"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
serde_bytes = "0.11"

# Web frameworks
axum = "0.8.7"
tower-http = { version = "0.6", features = ["trace", "cors", "normalize-path"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures and utilities
bytes = "1.11.0"
dashmap = "6.1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Caching
moka = { version = "0.12", features = ["future"] }
foyer = "0.21.1"

# Storage
sled = "0.34"

# Error handling
thiserror = "2.0.17"

# Security
argon2 = { version = "0.5", features = ["std"] }

# Random number generation
rand = "0.9.2"
rand_core = "0.9.3"

# Configuration
dotenvy = "0.15"

# Development and profiling
dhat = "0.3.3"
tempfile = "3.23.0"

# Workspace members
carbon = { path = "carbon" }
carbon-server = { path = "carbon-server" }
carbon-admin-ui = { path = "carbon-admin-ui" }
shared = { path = "shared" }
shared-http = { path = "shared-http" }
storage-engine = { path = "storage-engine" }
server-http = { path = "server-http" }
server-tcp = { path = "server-tcp" }

[profile.release]
debug = true # Keep debug symbols for profiling
