[package]
name = "carbon-admin-ui"
version = "0.1.0"
authors = ["Chirdeep Tomar <chirdeep.tomar@gmail.com>"]
edition = "2021"

[[bin]]
name = "carbon-admin-ui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
