[package]
name = "carbon-admin-ui"
version = "0.1.0"
authors = ["Chirdeep Tomar <chirdeep.tomar@gmail.com>"]
edition = "2024"

[[bin]]
name = "carbon-admin-ui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
serde_json.workspace = true
serde.workspace = true
dotenvy.workspace = true
shared-http.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }
strum = "0.27"
strum_macros = "0.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
