[package]
name = "carbon-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "carbon-server"
path = "src/main.rs"

[dependencies]
# Reuse existing server dependencies
server-http.workspace = true
server-tcp.workspace = true

# Core dependencies
carbon.workspace = true
shared.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

# HTTP dependencies
axum.workspace = true
