[package]
name = "carbon"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.68"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["sync"] }
tempfile = "3.23.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

shared = { path = "../shared" }
