[package]
name = "carbon"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.68"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sled = "0.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "macros", "rt-multi-thread"] }
tempfile = "3.23.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.11.0"
shared = { path = "../shared" }
