[package]
name = "carbon"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
moka.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sled.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tempfile.workspace = true
tracing.workspace = true
uuid.workspace = true
bytes.workspace = true
shared.workspace = true
