[package]
name = "server-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.2"
fake = { version = "4.4.0", features = ["derive"] }
log = "0.4.21"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-reflection = { version = "0.14.2" }
tonic-prost = "0.14.2"
rand = "0.9.2"
carbon = { path = "../carbon" }
shared = { path = "../shared" }
storage-engine = { path = "../storage-engine" }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization/deserialization with Serde
]
