[package]
name = "server-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server-http"
path = "src/main.rs"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace", "cors", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
carbon = { path = "../carbon" }
shared = { path = "../shared" }
storage-engine = { path = "../storage-engine" }
