[package]
name = "server-http"
version = "0.1.0"
edition = "2021"

[lib]
name = "server_http"
path = "src/lib.rs"

[[bin]]
name = "server-http"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http = { workspace = true, features = ["trace", "normalize-path", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
carbon.workspace = true
shared.workspace = true
storage-engine.workspace = true
dhat.workspace = true
bytes.workspace = true
