[package]
name = "server-tcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "server_tcp"
path = "src/lib.rs"

[[bin]]
name = "server-tcp"
path = "src/main.rs"

[dependencies]
dotenvy.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
carbon.workspace = true
shared.workspace = true
storage-engine.workspace = true
dhat.workspace = true
bytes.workspace = true
serde.workspace = true
tokio-util.workspace = true
futures.workspace = true
