[package]
name = "storage-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.68"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.2"
fake = { version = "4.4.0", features = ["derive"] }
log = "0.4.21"
rand = "0.9.2"
foyer = "0.20.1"
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

carbon = { path = "../carbon" }
shared = { path = "../shared" }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization/deserialization with Serde
]
