[package]
name = "storage-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.68"
foyer = "0.20.1"
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

carbon = { path = "../carbon" }
shared = { path = "../shared" }
